--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "node server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.38.0",
-    "express": "^4.22.1",
-    "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react": "^19.2.4",
+    "@google/genai": "^1.38.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
